--- a/public/css/style.css
+++ b/public/css/style.css
@@ -918,3 +918,39 @@ h3 {
   text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.8);
 }
+
+/* pets page */
+.pet_content {
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: #ffad92;
+  padding: 9px 18px;
+}
+
+.petsection {
+  display: flex;
+  border-radius: 30px;
+  background-color: rgb(252, 236, 220);
+}
+.petsinfo-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 15px;
+}
+.petinfo {
+  line-height: 1.4;
+}
+.petsection img {
+  max-width: 200px;
+  display: block;
+  border-radius: 30px 0 0 30px;
+  margin-right: 30px;
+}
+
+.petinfo {
+  font-size: 24px;
+}
+.pet-list > li {
+  margin: 18px 0;
+}
