--- a/views/pets/pets-index.ejs
+++ b/views/pets/pets-index.ejs
@@ -13,7 +13,7 @@
   <body>
     <div class="navbar">
       <div class="container ">
-        <h1><a href="./">FURRURU 呼嚕嚕</a></h1>
+        <h1><a href="../">FURRURU 呼嚕嚕</a></h1>
         <ul class="menu">
           <li><a href="../booking">快速媒合</a></li>
           <li><a href="../schedule">寶貝動態</a></li>
@@ -51,6 +51,26 @@
         </h2>
       </div>
     </div>
+    <div class="pet_content ">
+        <ul class="pet-list">
+        <% pets.forEach(pet=>{%>
+            <li>
+                <div class="petsection">
+                <img src="../../img/petimage-1.jpg" alt="寵物照片">
+                <div class="petsinfo-section">
+                    
+                    <ul class="petinfo">
+                        <li><p class="petname"><%= pet.name %></p></li>
+                        <li><%= pet.breed %></li>
+                        <li><%= pet.status %></li>
+                        <li><%= pet.birthday %></li>
+                    </ul>
+                    <a class="petrecord" href="#">服務紀錄</a>
+                </div>
+              </div>
+            </li>
+          <% })%>
+        </ul>
     <div class="pet_content ">
         <ul class="pet-list">
             <li>
