--- a/views/pets/pets-new.ejs
+++ b/views/pets/pets-new.ejs
@@ -1,63 +1,102 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FURRURU 即時動態</title>
-    <script src="https://kit.fontawesome.com/f1f29270e9.js" crossorigin="anonymous"></script>
-    <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="../../js/all.js"></script>
-    <link rel="stylesheet" href="../../css/style.css">
-  </head>
-  <body>
-    <div class="navbar">
-      <div class="container ">
-        <h1><a href="../">FURRURU 呼嚕嚕</a></h1>
-        <ul class="menu">
-          <li><a href="../booking">快速媒合</a></li>
-          <li><a href="../schedule">寶貝動態</a></li>
-          <li><a href="../cam">即時影像</a></li>
-          <li><a href="../about">關於呼嚕</a></li>          
-          <li><a href="#">帳戶</a></li>
-          
-        </ul>
-        <i class="fa-solid fa-bars"></i>
-        
-      </div>
-    </div>
-    
-    <div class="banner">
-      <div class="container">
-        <div class="title">
-          <p class="FURRURU_title">FURRURU</p>
-          <p class="FURRURU_title">FURRURU</p>
-        </div>
-        <div class="banner_slogan">
-          <p>呼嚕嚕</br>讓您與毛寶貝心裡暖呼呼</p>
-          <a  class="start "href="./booking">預約服務</a>
-        </div>
-      </div>
-      <section>
-        <div class="wave wave0"></div>
-          <div class="wave wave1"></div>
-          <div class="wave wave2"></div>
+<div class="navbar">
+  <div class="container">
+    <h1><a href="../">FURRURU 呼嚕嚕</a></h1>
 
-      </section>
-    </div>
-    <div class="content container">
-      <div class="tech">
-        <h2>你的寶貝們
-        </h2>
-      </div>
-    </div>
-    <div class="pet_content ">
+    <ul class="menu">
+      <li><a href="../booking">快速媒合</a></li>
+      <li><a href="../schedule">寶貝動態</a></li>
+      <li><a href="../cam">即時影像</a></li>
+      <li><a href="../about">關於呼嚕</a></li>
+      <li><a href="#">帳戶</a></li>
+    </ul>
+    <i class="fa-solid fa-bars"></i>
+  </div>
+</div>
 
-      
+<div class="banner">
+  <div class="container">
+    <div class="title">
+      <p class="FURRURU_title">新增寶貝資料</p>
     </div>
-    <div class="smiling_photo_phone features_3_pic"></div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../../js/select.js"></script>
-    </body>
-</html>
+
+    <form action="/pets" method="POST" class="reg-form">
+      <%- include('./_form_field') %> <%- include('../pets/_errorMessage.ejs')
+      %>
+      <!-- <div>
+            <label for="name">姓名</label>
+            <input type="name" id="name" name="name" required />
+          </div>
+          <div>
+            <label for="breed">品種</label>
+            <input type="text" id="breed" name="breed" required />
+          </div>
+          <div>
+            <label for="status">狀態</label>
+            <input type="status" id="status" name="status" required />
+          </div>
+          <div>
+            <label for="birthday">生日</label>
+            <input type="date" id="birthday" name="birthday" required />
+          </div> -->
+      <ul class="choose_page">
+        <li><button type="submit">新增</button></li>
+        <li><a href="/pets/">取消</a></li>
+      </ul>
+    </form>
+
+    <style>
+      .banner {
+        height: 100vh;
+      }
+      .reg-form {
+        margin: 30px auto;
+      }
+      .reg-form div {
+        padding: 15px 0;
+      }
+    </style>
+
+    <style>
+      .choose_page {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: 30px;
+        margin-bottom: 50px;
+      }
+      button,
+      .choose_page a {
+        padding: 20px 0px;
+        background-color: #ff7e42;
+        display: block;
+        font-size: 22px;
+        color: aliceblue;
+        border-radius: 30px;
+        text-decoration: none;
+        font-weight: bold;
+        border: 0;
+        width: 250px;
+        text-align: center;
+        line-height: 1;
+        margin-bottom: 20px;
+      }
+      button:hover,
+      .choose_page a:hover {
+        background-color: #ffe042;
+        color: gray;
+        cursor: pointer;
+      }
+      @media (max-width: 576px) {
+        .choose_page a {
+          font-size: 22px;
+          padding: 15px 20px;
+        }
+      }
+    </style>
+  </div>
+</div>
+<!-- <script src="https://npmcdn.com/react@15.3.0/dist/react.min.js"></script>
+    <script src="https://npmcdn.com/react-dom@15.3.0/dist/react-dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment-with-locales.min.js"></script>
+    <script src="../js/booking-script.js"></script> -->
