--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -18,6 +18,9 @@
       src="https://kit.fontawesome.com/f1f29270e9.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/f1f29270e9.js" crossorigin="anonymous"></script>
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/all.js"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
     <script src="../../js/all.js"></script>
   </head>
