--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -24,13 +24,9 @@
     <script src="../../js/jquery-3.6.0.min.js"></script>
     <script src="../../js/all.js"></script>
   </head>
-  
+  <body>
   <%- body %>
-  
-      </div>
-    <div class="smiling_photo_phone features_3_pic"></div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../../js/select.js"></script>
-    </body>
+  </body>
 </html>
