--- a/views/pets/pets-index.ejs
+++ b/views/pets/pets-index.ejs
@@ -7,7 +7,7 @@
     <title>FURRURU 即時動態</title>
     <script src="https://kit.fontawesome.com/f1f29270e9.js" crossorigin="anonymous"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="../../js/all.js"></script>
+    <script src="../../public/js/all.js"></script>
     <link rel="stylesheet" href="../../css/style.css">
   </head>
   <body>
@@ -71,6 +71,7 @@
             </li>
           <% })%>
         </ul>
+      </div>
     <div class="pet_content ">
         <ul class="pet-list">
             <li>
@@ -118,7 +119,7 @@
       
     </div>
     <div class="smiling_photo_phone features_3_pic"></div>
-    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../../js/select.js"></script>
     </body>
