--- a/views/cam.ejs
+++ b/views/cam.ejs
@@ -72,3 +72,15 @@
     <script src="../js/select.js"></script>
     </body>
 </html>
+<style>
+.banner .container{
+  flex-direction:row;
+}
+
+@media (max-width: 576px) {
+.banner .container{
+  flex-direction:column;
+}
+
+}
+</style>
