--- a/views/caretaker-page.ejs
+++ b/views/caretaker-page.ejs
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FURRURU 快速媒合</title>
     <script src="https://kit.fontawesome.com/f1f29270e9.js" crossorigin="anonymous"></script>
-    <script src="./js/jquery-3.6.0.min.js"></script>
-    <script src="./js/all.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <script src="../../js/jquery-3.6.0.min.js"></script>
+    <script src="../../js/all.js"></script>
+    <link rel="stylesheet" href="../../css/style.css">
   </head>
   <body>
     <script>
@@ -48,15 +48,43 @@
 
       </section>
     </div>
-    <div class="content container">
-      <div class="tech">
-        <h2>快速媒合</h2>
-        <p>我們將提供最適合您寶貝的服務</p>
-     </div> 
-    <div class="safeplan_pic">
-     <img src="./img/caretakers.png" alt="caretakers_demo_pic">
-    </div>
-  </div>
+    
+    <ul class="caretaker-list">
+      <li>
+     <div class="caretaker">
+        <img src=<%= caretaker.pic %> alt="照護人員" class="caretaker-pic">  
+      
+        <div class="info">
+          <p class="caretaker_title"><%= caretaker.name %></p>
+          <span><%= caretaker.location %></span><span><%= caretaker.distance %>km</span>
+          <ul class="service">
+            <li><img src="../img/CheckBox.png" alt=""><p><%= caretaker.service %></p></li>
+          
+          </ul>
+          <div class="review">
+          <p>評價：<%= caretaker.rating %></p>
+          <!-- <img src="#" alt="星"> -->
+          <a href="#" class="review-number">(<%= caretaker.commentNumber %>則)</a>
+          </div>
+        </div>
+      
+        <div class="tag">
+          <ul>
+            <li><p><%= caretaker.tag %></p></li>
+          </ul>
+        </div>
+        <div class="more-info">
+          <form method="GET" action="/caretakers/<%=caretaker.id%>">
+            
+          </form>
+          <a href="#">收藏</a>
+          <a href="#">瀏覽數：<%=caretaker.clicked%></a>
+        </div>
+      </div>
+      </li>
+    </ul>
+    
+  
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/select.js"></script>
     <script src="../js/booking_option.js"></script>
@@ -66,9 +94,15 @@
 
     </html>
 
-<style>
-  /* .more-info button{
-    background: transparent;
-    border: 0px;
-  } */
-</style>
+    <style>
+      .banner .container{
+        flex-direction:row;
+      }
+      
+      @media (max-width: 576px) {
+      .banner .container{
+        flex-direction:column;
+      }
+      
+      }
+      </style>
