--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
           <li><a href="/schedule">寶貝動態</a></li>
           <li><a href="/cam">即時影像</a></li>
           <li><a href="/about">關於呼嚕</a></li>
-          <li><a href="#">帳戶</a></li>
+          <li><a href="/user">帳戶</a></li>
           
         </ul>
         <i class="fa-solid fa-bars"></i>
@@ -129,3 +129,15 @@
     <script src="../js/select.js"></script>
     </body>
 </html>
+<style>
+.banner .container{
+  flex-direction:row;
+}
+
+@media (max-width: 576px) {
+.banner .container{
+  flex-direction:column;
+}
+
+}
+</style>
