--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,11 +27,11 @@
         <h1><a href="./">FURRURU 呼嚕嚕</a></h1>
 
         <ul class="menu">
-          <li><a href="./booking">快速媒合</a></li>
-          <li><a href="./schedule">寶貝動態</a></li>
-          <li><a href="./cam">即時影像</a></li>
-          <li><a href="./about">關於呼嚕</a></li>
-          <li><a href="#">帳戶</a></li>
+          <li><a href="/booking">快速媒合</a></li>
+          <li><a href="/schedule">寶貝動態</a></li>
+          <li><a href="/cam">即時影像</a></li>
+          <li><a href="/about">關於呼嚕</a></li>
+          <li><a href="/user">帳戶</a></li>
         </ul>
         <i class="fa-solid fa-bars"></i>
       </div>
