--- a/views/pets/_form_field.ejs
+++ b/views/pets/_form_field.ejs
@@ -1,16 +1,16 @@
 <div>
-  <label for="name">姓名</label>
+  <label for="name">寶貝姓名</label>
   <input type="name" id="name" name="name" value="<%=pet.name%>" required />
 </div>
 <div>
-  <label for="breed">品種</label>
+  <label for="breed">寶貝品種</label>
   <input type="text" id="breed" name="breed" value="<%=pet.breed%>" required />
 </div>
 <div>
-  <label for="status">狀態</label>
+  <label for="status">寶貝年齡</label>
   <input type="status" id="status" name="status" value="<%=pet.status%>" />
 </div>
 <div>
-  <label for="birthday">生日</label>
+  <label for="birthday">寶貝生日</label>
   <input type="date" id="birthday" name="birthday" value="<%=pet.birthday%>" />
 </div>
