--- a/views/user-pages/user.ejs
+++ b/views/user-pages/user.ejs
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FURRURU 寵物動態</title>
+    <title>FURRURU 即時動態</title>
     <script src="https://kit.fontawesome.com/f1f29270e9.js" crossorigin="anonymous"></script>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/all.js"></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <script src="../../js/jquery-3.6.0.min.js"></script>
+    <script src="../../public/js/all.js"></script>
+    <link rel="stylesheet" href="../../css/style.css">
   </head>
   <body>
     <div class="navbar">
       <div class="container ">
-        <h1><a href="./">FURRURU 呼嚕嚕</a></h1>
+        <h1><a href="../">FURRURU 呼嚕嚕</a></h1>
         <ul class="menu">
-          <li><a href="./booking">快速媒合</a></li>
-          <li><a href="./schedule">寶貝動態</a></li>
-          <li><a href="./cam">即時影像</a></li>
-          <li><a href="./about">關於呼嚕</a></li>          
+          <li><a href="../booking">快速媒合</a></li>
+          <li><a href="../schedule">寶貝動態</a></li>
+          <li><a href="../cam">即時影像</a></li>
+          <li><a href="../about">關於呼嚕</a></li>          
           <li><a href="#">帳戶</a></li>
           
         </ul>
@@ -47,15 +47,17 @@
     </div>
     <div class="content container">
       <div class="tech">
-        <h2>寶貝動態</h2>
-        <p>掌握寶貝的照護流程<br>定期回報好安心</p>
+        <h2>你的寶貝們
+        </h2>
       </div>
     </div>
-    <div class="safeplan_pic">
-     <img src="./img/schedule.png" alt="schedule_demo_pic">
-    </div>
+    <a href="/pets">你的寶貝</a>
+    
+    
+    <div class="smiling_photo_phone features_3_pic"></div>
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/select.js"></script>
+    <script src="../../js/select.js"></script>
     </body>
 </html>
 <style>
