--- a/views/caretaker-page.ejs
+++ b/views/caretaker-page.ejs
@@ -103,6 +103,20 @@
       .banner .container{
         flex-direction:column;
       }
-      
+      .caretaker-pic {
+        width: 100%;
+        align-self: center;
+      }
+      .caretaker {
+        flex-direction: column;
+        margin-bottom: 30px;
+        padding: 50px;
+      }
+
+      .more-info {
+        position: relative;
+        display: flex;
+        padding-right: 15px;
+      }
       }
       </style>
