--- a/views/caretakers.ejs
+++ b/views/caretakers.ejs
@@ -106,7 +106,7 @@ t="照護人員" class="caretaker-pic">
     </html>
 
 <style>
-@media(max-width:567px){
+/* @media(max-width:567px){
   .caretaker-pic {
   width: 100%;
   align-self: center;
@@ -122,5 +122,5 @@ t="照護人員" class="caretaker-pic">
   padding-right: 15px;
 }
   
-}
+} */
 </style>
