--- a/views/user-pages/user.ejs
+++ b/views/user-pages/user.ejs
@@ -7,7 +7,7 @@
     <title>FURRURU 即時動態</title>
     <script src="https://kit.fontawesome.com/f1f29270e9.js" crossorigin="anonymous"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="../../public/js/all.js"></script>
+    <script src="../js/all.js"></script>
     <link rel="stylesheet" href="../../css/style.css">
   </head>
   <body>
@@ -47,7 +47,7 @@
     </div>
     <div class="content container">
       <div class="tech">
-        <h2>你的寶貝們
+        <h2>帳戶資訊
         </h2>
       </div>
     </div>
