--- a/views/caretaker-page.ejs
+++ b/views/caretaker-page.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FURRURU 快速媒合</title>
     <script src="https://kit.fontawesome.com/f1f29270e9.js" crossorigin="anonymous"></script>
-    <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="../../js/all.js"></script>
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/all.js"></script>
     <link rel="stylesheet" href="../../css/style.css">
   </head>
   <body>
@@ -18,11 +18,11 @@
       <div class="container ">
         <h1><a href="./">FURRURU 呼嚕嚕</a></h1>
         <ul class="menu">
-          <li><a href="./booking">快速媒合</a></li>
-          <li><a href="./schedule">寶貝動態</a></li>
-          <li><a href="./cam">即時影像</a></li>
-          <li><a href="./about">關於呼嚕</a></li>          
-          <li><a href="#">帳戶</a></li>
+          <li><a href="/booking">快速媒合</a></li>
+          <li><a href="/schedule">寶貝動態</a></li>
+          <li><a href="/cam">即時影像</a></li>
+          <li><a href="/about">關於呼嚕</a></li>          
+          <li><a href="/user">帳戶</a></li>
           
         </ul>
         <i class="fa-solid fa-bars"></i>
