--- a/views/pets/pets-index.ejs
+++ b/views/pets/pets-index.ejs
@@ -88,6 +88,14 @@
 .banner .container{
   flex-direction:column;
 }
-
+.petsection  {
+  flex-direction:column;
+}
+}
+.petsection img {
+  border-radius: 30px 30px 0 0;
+  max-width: 100%;
+  display: block;
+  margin: 0;
 }
 </style>
