--- a/views/caretakers.ejs
+++ b/views/caretakers.ejs
@@ -33,12 +33,7 @@
     <div class="banner">
       <div class="container">
         <div class="title">
-          <p class="FURRURU_title">FURRURU</p>
-          <p class="FURRURU_title">FURRURU</p>
-        </div>
-        <div class="banner_slogan">
-          <p>呼嚕嚕</br>讓您與毛寶貝心裡暖呼呼</p>
-          <a  class="start "href="./booking">預約服務</a>
+          <p class="FURRURU_title">媒合照護服務</p>
         </div>
       </div>
       <section>
@@ -106,7 +101,7 @@ t="照護人員" class="caretaker-pic">
     </html>
 
 <style>
-/* @media(max-width:567px){
+@media(max-width:567px){
   .caretaker-pic {
   width: 100%;
   align-self: center;
@@ -120,7 +115,15 @@ t="照護人員" class="caretaker-pic">
   position: relative;
   display: flex;
   padding-right: 15px;
+
 }
-  
-} */
+
+.title p {
+    font-size: 50px;
+
+}
+.banner{
+  height:400px;
+}
+}
 </style>
