--- a/views/caretakers.ejs
+++ b/views/caretakers.ejs
@@ -48,7 +48,26 @@
         <h2>快速媒合</h2>
         <p>我們將提供最適合您寶貝的服務</p>
       </div>
-    
+    <div class="filter container">
+      <div class="filter-title">
+        <img src="../img/FURRURU 呼嚕嚕.svg" alt="alt">
+        <p>搜尋照護服務</p>
+      </div>
+      <div class="main-filter">
+        <form action="">
+        <div class="search-bar">
+          <input type="text" value="輸入服務/店名/地區">
+          
+        </div>
+        <div class="secondary-bar">
+          <label>品種</label>
+          <input type="text" class="breed-select">
+          <label>日期</label>
+          <input type="date" class="breed-select">
+        </div>
+      </div>
+      </form>
+    </div>
     <ul class="caretaker-list">
       <% caretakers.forEach(caretaker=>{%>
       <li><div class="caretaker">
