--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,24 +53,37 @@
       </div>
       <ul class="features">
         <li>
+          <a href="/booking">
           <img src="./img/feature1.png" alt="feature1">
-          
+        </a> 
           <h3>智慧推薦系統</h3>
           <p>以<span>人工智慧</span>技術，根據服務紀錄，推薦合適的旅館與照護員給您的寶貝，不再花大量時間做選擇。
           </p>  
         </li>
         <li>
-          <img src="./img/feature2.png" alt="feature2">
+          <a href="/schedule">
+          <img src="./img/feature2.png" alt="feature2"></a>
           <h3>智慧監控系統</h3>
           <p>依據不同寵物客製化，<span>自動提醒</span>輔助照護人員，「<span>一鍵回報</span>」功能，讓主人們出門也能掌握寶貝動態。
           </p>
         </li>
         <li>
+          <a href="/cam">
           <img src="./img/feature3.png" alt="feature3">
+          </a> 
           <h3>即時影像狀態</h3>
           <p>提供寵物的即時影像，使用影像<span>機器學習</span>技術，透過監控器影像自動分辨寵物的狀態，主人在外好安心。</p>    
+        
         </li>
+
       </ul>
+      <style>
+        .features li:hover img{
+          padding: 10px 0;
+          transition: all 1s ease-out;
+          
+        }
+      </style>
     </div>
     <div class="safeplan_pic">
      <img src="./img/banner2.jpg" alt="safebubble_pic">
