--- a/views/user-pages/user.ejs
+++ b/views/user-pages/user.ejs
@@ -50,8 +50,58 @@
         <h2>帳戶資訊
         </h2>
       </div>
+      <div class="real-content">
+        <div class="side">
+          <img src="../../img/profile_default.png" alt="個人照片">
+          
+        </div>
+        <div class="main-content">
+          <ul class="main-info">
+            <li>
+              <div class="title">
+                <p>個人資訊</p>
+              </div>
+              <div class="table">
+                <ul>
+                  <li>姓名：林賽亞</li>
+                  <li>電話：091234567890</li>
+                  <li>信箱：furruru@gmail</li>
+                  <li>生日：2000/12/31</li>
+                </ul>
+                <a href="#">編輯</a>
+              </div>
+            </li>
+            <li>
+              <div class="title">
+                <p>你的寶貝</p>
+              </div>
+              <div class="table">
+                <ul>
+                  <li>姓名：黑黑</li>
+                  <li>品種：貓</li>
+                  <li>生日：2000/12/31</li>
+                </ul>
+                <a href="/pets">寶貝管理</a>
+            </li>
+            <li>
+              <div class="title">
+                <p>服務紀錄</p>
+              </div>
+              <div class="table">
+                <ul>
+                  <li>照護員：小丁</li>
+                  <li>服務：安親照護
+                  </li>
+                  <li>日期：2022/8/31</li>
+                </ul>
+                <a href="/pets">查看更多</a>
+            </li>
+          </ul>
+        </div>  
+      </div>
     </div>
-    <a href="/pets">你的寶貝</a>
+
+   
     
     
     <div class="smiling_photo_phone features_3_pic"></div>
