--- a/views/cam.ejs
+++ b/views/cam.ejs
@@ -52,19 +52,8 @@
         <p>直接與寶貝線上會議<br>暖心零距離</p>
       </div>
     </div>
-    <div class="safe_content container features_3">
-      <div class="safeplan">
-        <div class="title_decord">
-          <span>特色三</span><h3>即時影像狀態</h3>
-          <div class="smiling_photo"></div>
-          <div class="blue_back"></div>  
-        </div>
-        <div class="line"></div>
-        <p class="plan_content">除了能夠提供寵物的及時影像，也使用 ResNet-50 V2 <span>機器學習技術</span>，透過監控器影像自動分辨寵物的狀態，如：喝水、休息。若有異常狀態便能緊急通知飼主與照護人員。
-
-        </p>
-        <img src="./img/list3.png" alt="list3">
-      </div>
+    <div class="safe_content container">
+     <img class="cam" src="../img/cam.png" alt="#">
     </div>
     <div class="smiling_photo_phone features_3_pic"></div>
     </div>
