--- a/views/user-pages/user.ejs
+++ b/views/user-pages/user.ejs
@@ -19,7 +19,7 @@
           <li><a href="../schedule">線上監控</a></li>
           <li><a href="../cam">即時影像</a></li>
           <li><a href="../about">關於呼嚕</a></li>          
-          <li><a href="#">帳戶</a></li>
+          <li><a href="../user">帳戶</a></li>
           
         </ul>
         <i class="fa-solid fa-bars"></i>
