--- a/views/user-pages/user.ejs
+++ b/views/user-pages/user.ejs
@@ -68,7 +68,7 @@
                   <li>信箱：furruru@gmail</li>
                   <li>生日：2000/12/31</li>
                 </ul>
-                <a href="#">編輯</a>
+                <!-- <a href="#">編輯</a> -->
               </div>
             </li>
             <li>
@@ -94,7 +94,7 @@
                   </li>
                   <li>日期：2022/8/31</li>
                 </ul>
-                <a href="/pets">查看更多</a>
+                <!-- <a href="/pets">查看更多</a> -->
             </li>
           </ul>
         </div>  
