--- a/views/pets/pets-new.ejs
+++ b/views/pets/pets-new.ejs
@@ -4,7 +4,7 @@
 
     <ul class="menu">
       <li><a href="../booking">快速媒合</a></li>
-      <li><a href="../schedule">寶貝動態</a></li>
+      <li><a href="../schedule">線上監控</a></li>
       <li><a href="../cam">即時影像</a></li>
       <li><a href="../about">關於呼嚕</a></li>
       <li><a href="../user">帳戶</a></li>
