--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1104,7 +1104,7 @@ h3 {
   }
 }
 
-.cam {
+/* .cam {
   width: 800px;
   height: auto;
   justify-self: center;
@@ -1119,7 +1119,7 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
+} */
 
 @media (max-width: 576px) {
   .cam {
