--- a/views/caretakers.ejs
+++ b/views/caretakers.ejs
@@ -19,7 +19,7 @@
         <h1><a href="./">FURRURU 呼嚕嚕</a></h1>
         <ul class="menu">
           <li><a href="./booking">快速媒合</a></li>
-          <li><a href="./schedule">寶貝動態</a></li>
+          <li><a href="./schedule">線上監控</a></li>
           <li><a href="./cam">即時影像</a></li>
           <li><a href="./about">關於呼嚕</a></li>          
           <li><a href="./user">帳戶</a></li>
@@ -40,7 +40,6 @@
         <div class="wave wave0"></div>
           <div class="wave wave1"></div>
           <div class="wave wave2"></div>
-
       </section>
     </div>
     <div class="content container">
