--- a/public/css/style.css
+++ b/public/css/style.css
@@ -610,7 +610,7 @@ h2 {
 }
 .title_decord h3 {
   font-weight: 600;
-  font-size: 48px;
+  /* font-size: 48px; */
   line-height: 50px;
   text-align: center;
   letter-spacing: 0.3em;
@@ -1104,7 +1104,7 @@ h3 {
   }
 }
 
-/* .cam {
+.cam {
   width: 800px;
   height: auto;
   justify-self: center;
@@ -1119,7 +1119,7 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-} */
+}
 
 @media (max-width: 576px) {
   .cam {
