--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1103,7 +1103,7 @@ h3 {
     width: 319px;
   }
 }
-
+/* 
 .cam {
   width: 800px;
   height: auto;
@@ -1119,7 +1119,7 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
+} */
 
 @media (max-width: 576px) {
   .cam {
