--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,12 @@
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/all.js"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <meta property="og:site_name" content="呼嚕嚕寵物照護平台" />
+<meta property="fb:app_id" content="FURRURU" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="呼嚕嚕寵物照護平台" />
+<meta property="og:description" content="呼嚕嚕讓您與寶貝心理暖呼呼" />
+<meta property="og:image" content="https://i.postimg.cc/9FjqZqPK/banner2.jpg" />
   </head>
   <body>
     <div class="navbar">
